--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,12 +14,29 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="TextAppearance.GamePod" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:fontFamily">@font/googlesans_medium</item>
+    </style>
 
     <style name="AccountManageStyle" parent="@style/Theme.AppCompat.Light">
         <item name="android:textColor">#ffffff</item>
         <item name="android:editTextColor">#ffffff</item>
-        <item name="fontFamily">@font/googlesans_medium</item>
+        <item name="android:fontFamily">@font/googlesans_medium</item>
         <item name="android:textColorHint">#50ffffff</item>
     </style>
 
+    <style name="ListGame" parent="@style/Theme.AppCompat.Light">
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:background">@drawable/custom_background_list_game</item>
+    </style>
+    
+    <style name="HomeHeader" parent="@style/Theme.AppCompat.Light">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:fontFamily">@font/googlesans_bold</item>
+    </style>
+    
 </resources>
