--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -41,6 +41,7 @@
             android:layout_height="50dp"
             android:hint="E-mail"
             android:gravity="center"
+            android:inputType="text"
             android:id="@+id/email"
             android:background="@drawable/custom_edit_text"
             android:layout_gravity="center"/>
@@ -49,6 +50,7 @@
             android:layout_width="350dp"
             android:layout_height="50dp"
             android:gravity="center"
+            android:inputType="text"
             android:id="@+id/password"
             android:layout_marginTop="10dp"
             android:background="@drawable/custom_edit_text"
