--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -41,6 +41,7 @@
             android:layout_height="50dp"
             android:hint="@string/username"
             android:gravity="center"
+            android:inputType="text"
             android:id="@+id/username_field"
             android:background="@drawable/custom_edit_text"
             android:layout_gravity="center"/>
@@ -50,6 +51,7 @@
             android:layout_height="50dp"
             android:gravity="center"
             android:id="@+id/email_field"
+            android:inputType="text"
             android:layout_marginTop="10dp"
             android:background="@drawable/custom_edit_text"
             android:layout_gravity="center"
@@ -62,6 +64,7 @@
             android:gravity="center"
             android:id="@+id/password_field"
             android:layout_marginTop="10dp"
+            android:inputType="text"
             android:background="@drawable/custom_edit_text"
             android:layout_gravity="center"
             android:hint="@string/password_button"
@@ -71,6 +74,7 @@
             android:layout_width="350dp"
             android:layout_height="50dp"
             android:gravity="center"
+            android:inputType="text"
             android:id="@+id/password_verify_field"
             android:layout_marginTop="10dp"
             android:background="@drawable/custom_edit_text"
