--- a/app/src/main/res/layout/activity_details_game.xml
+++ b/app/src/main/res/layout/activity_details_game.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#1a2025"
     android:theme="@style/TextAppearance.GamePod"
-    tools:context=".detailsGame">
+    tools:context=".DetailsGame">
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -155,6 +155,7 @@
         android:layout_marginTop="40dp"
         android:gravity="center"
         android:padding="0dp"
+        android:id="@+id/menu_layout"
         app:layout_constraintStart_toStartOf="@id/guideline_start_menu"
         app:layout_constraintEnd_toEndOf="@id/guideline_end_menu"
         app:layout_constraintTop_toBottomOf="@id/layout_game_description">
@@ -178,6 +179,25 @@
             android:text="@string/Reviews"/>
 
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/guideline_info"
+        app:layout_constraintGuide_end="0dp"
+        />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/menu_layout"
+        app:layout_constraintStart_toStartOf="@id/guideline_start_menu"
+        app:layout_constraintEnd_toEndOf="@id/guideline_end_menu"
+        app:layout_constraintBottom_toTopOf="@id/guideline_info">
+
+    </View>
 
 
 
