--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,5 +38,10 @@
         <item name="android:textColor">#ffffff</item>
         <item name="android:fontFamily">@font/googlesans_bold</item>
     </style>
-    
+
+    <style name="foodRatingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:minHeight">22dip</item>
+        <item name="android:maxHeight">22dip</item>
+    </style>
+
 </resources>
