--- a/app/src/main/res/layout/activity_details_game.xml
+++ b/app/src/main/res/layout/activity_details_game.xml
@@ -152,7 +152,7 @@
         android:layout_width="0dp"
         android:layout_height="35dp"
         android:orientation="horizontal"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:gravity="center"
         android:padding="0dp"
         android:id="@+id/menu_layout"
@@ -163,6 +163,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:id="@+id/description_path"
             android:layout_weight="0.5"
             android:textSize="15sp"
             android:gravity="center"
@@ -173,6 +174,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
+            android:id="@+id/reviews_path"
             android:textSize="15sp"
             android:background="@drawable/custom_opinion"
             android:layout_weight="0.5"
