--- a/app/src/main/res/layout/activity_details_game.xml
+++ b/app/src/main/res/layout/activity_details_game.xml
@@ -121,6 +121,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="17sp"
+                android:id="@+id/game_details_title"
                 android:text="Nom du jeu"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -190,16 +191,17 @@
         app:layout_constraintGuide_end="0dp"
         />
 
-    <View
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
+        android:id="@+id/view_group"
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/menu_layout"
         app:layout_constraintStart_toStartOf="@id/guideline_start_menu"
         app:layout_constraintEnd_toEndOf="@id/guideline_end_menu"
         app:layout_constraintBottom_toTopOf="@id/guideline_info">
-
-    </View>
+    </LinearLayout>
 
 
 
