--- a/app/src/main/res/layout/reviews_view.xml
+++ b/app/src/main/res/layout/reviews_view.xml
@@ -6,8 +6,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/gameReviewUser"
+        android:text="uwuuwuuwuuuwuu">
+    </TextView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/gameReviewsDescription"
         android:text="uwuuwuuwuuuwuu">
     </TextView>
+
+    <RatingBar
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
