init call api pour toutes les activités ayant besoins
Ajout des coroutines pour toutes les activités ayant besoin + ajout warning pour les input field des écrans de connexion

--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -35,28 +35,63 @@
         android:orientation="vertical"
         android:layout_marginTop="20dp"
         >
-
-        <EditText
+        <FrameLayout
             android:layout_width="350dp"
             android:layout_height="50dp"
-            android:hint="E-mail"
-            android:gravity="center"
-            android:inputType="text"
-            android:id="@+id/email"
-            android:background="@drawable/custom_edit_text"
-            android:layout_gravity="center"/>
-
-        <EditText
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:inputType="text"
-            android:id="@+id/password"
             android:layout_marginTop="10dp"
-            android:background="@drawable/custom_edit_text"
-            android:layout_gravity="center"
-            android:hint="@string/password_button"
-            />
+            android:layout_gravity="center">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="E-mail"
+                android:gravity="center"
+                android:inputType="text"
+                android:id="@+id/email"
+                android:background="@drawable/custom_edit_text"
+                android:layout_gravity="center"/>
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="15dp"
+                android:id="@+id/problem_field_email"
+                android:src="@drawable/warning"
+                android:scaleType="centerInside"
+                />
+
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:inputType="text"
+                android:id="@+id/password"
+                android:background="@drawable/custom_edit_text"
+                android:layout_gravity="center"
+                android:hint="@string/password_button"
+                />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="15dp"
+                android:id="@+id/problem_field_password"
+                android:src="@drawable/warning"
+                android:scaleType="centerInside"
+                />
+
+        </FrameLayout>
+
     </LinearLayout>
 
 
