--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -28,19 +28,38 @@
         android:gravity="center"
         android:id="@+id/description_forgot_password"
         android:text="@string/forgot_password_description"/>
-    
-    <EditText
+
+    <FrameLayout
         android:layout_width="380dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/custom_edit_text"
-        android:layout_gravity="center"
-        android:textColorHint="#ffffff"
-        android:textColor="#ffffff"
-        android:gravity="center"
-        android:id="@+id/email"
-        android:inputType="text"
         android:layout_height="50dp"
-        android:hint="E-mail"/>
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/custom_edit_text"
+            android:layout_gravity="center"
+            android:textColorHint="#ffffff"
+            android:textColor="#ffffff"
+            android:gravity="center"
+            android:id="@+id/email"
+            android:inputType="text"
+            android:hint="E-mail"/>
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="end|center"
+            android:layout_marginEnd="15dp"
+            android:id="@+id/problem_field_email"
+            android:src="@drawable/warning"
+            android:scaleType="centerInside"
+            />
+
+    </FrameLayout>
+
+
     <Button
         android:layout_width="380dp"
         android:layout_gravity="center"
