--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -36,51 +36,121 @@
         android:layout_marginTop="40dp"
         >
 
-        <EditText
+        <FrameLayout
             android:layout_width="350dp"
             android:layout_height="50dp"
-            android:hint="@string/username"
-            android:gravity="center"
-            android:inputType="text"
-            android:id="@+id/username_field"
-            android:background="@drawable/custom_edit_text"
-            android:layout_gravity="center"/>
+            android:layout_marginTop="40dp"
+            android:layout_gravity="center">
 
-        <EditText
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:id="@+id/email_field"
-            android:inputType="text"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/custom_edit_text"
-            android:layout_gravity="center"
-            android:hint="E-mail"
-            />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/username"
+                android:gravity="center"
+                android:inputType="text"
+                android:id="@+id/username_field"
+                android:background="@drawable/custom_edit_text"
+                android:layout_gravity="center"/>
 
-        <EditText
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:id="@+id/password_field"
-            android:layout_marginTop="10dp"
-            android:inputType="text"
-            android:background="@drawable/custom_edit_text"
-            android:layout_gravity="center"
-            android:hint="@string/password_button"
-            />
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="15dp"
+                android:id="@+id/problem_field_username"
+                android:src="@drawable/warning"
+                android:scaleType="centerInside"
+                />
 
-        <EditText
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="350dp"
             android:layout_height="50dp"
-            android:gravity="center"
-            android:inputType="text"
-            android:id="@+id/password_verify_field"
             android:layout_marginTop="10dp"
-            android:background="@drawable/custom_edit_text"
-            android:layout_gravity="center"
-            android:hint="@string/password_verify"
-            />
+            android:layout_gravity="center">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:id="@+id/email_field"
+                android:inputType="text"
+                android:background="@drawable/custom_edit_text"
+                android:layout_gravity="center"
+                android:hint="E-mail"
+                />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="15dp"
+                android:id="@+id/problem_field_email"
+                android:src="@drawable/warning"
+                android:scaleType="centerInside"
+                />
+
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:id="@+id/password_field"
+                android:inputType="text"
+                android:background="@drawable/custom_edit_text"
+                android:layout_gravity="center"
+                android:hint="@string/password_button"
+                />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="15dp"
+                android:id="@+id/problem_field_password"
+                android:src="@drawable/warning"
+                android:scaleType="centerInside"
+                />
+
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:inputType="text"
+                android:id="@+id/password_verify_field"
+                android:background="@drawable/custom_edit_text"
+                android:layout_gravity="center"
+                android:hint="@string/password_verify"
+                />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="15dp"
+                android:id="@+id/problem_field_verify_password"
+                android:src="@drawable/warning"
+                android:scaleType="centerInside"
+                />
+
+        </FrameLayout>
+
     </LinearLayout>
 
 
