--- a/app/src/main/res/layout/activity_my_likes.xml
+++ b/app/src/main/res/layout/activity_my_likes.xml
@@ -50,12 +50,13 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5"/>
 
-    <View
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/home_layout"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/myLikesContent">
-    </View>
+        android:id="@+id/myLikesContent"
+        android:orientation="vertical">
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
