--- a/app/src/main/res/layout/activity_my_wish_list.xml
+++ b/app/src/main/res/layout/activity_my_wish_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#1a2025"
-    tools:context=".MyLikes">
+    tools:context=".myLikes.MyLikesActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_start_header"
@@ -88,12 +88,14 @@
         android:text="@string/empty_wish_list_text"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:id="@+id/list_game"
-        android:layout_marginTop="5dp"
-        tools:ignore="MissingConstraints" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/home_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/myWishListContent"
+        android:orientation="vertical">
+    </LinearLayout>
 
 
 
