--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -56,21 +56,11 @@
                 />
         </LinearLayout>
 
-        <androidx.constraintlayout.widget.Barrier
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:barrierDirection="end"/>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/scrollViewGames"
-            app:layout_constraintStart_toStartOf="@id/home_layout"
-            app:layout_constraintTop_toBottomOf="@+id/home_layout">
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/home_layout"
+                app:layout_constraintTop_toBottomOf="@+id/home_layout">
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guideline_start_scroll_view"
@@ -189,6 +179,14 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+                <androidx.constraintlayout.widget.Guideline
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.5"
+                    android:id="@+id/mid_part"
+                    />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -201,18 +199,38 @@
                     android:textSize="16sp"
                     />
 
-                <androidx.recyclerview.widget.RecyclerView
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/best_sales_text"
+                    android:indeterminate="true"
+                    app:layout_constraintStart_toStartOf="@+id/mid_part"
+                    app:layout_constraintEnd_toEndOf="@+id/mid_part"
+                    android:layout_marginTop="50dp"
+                    android:id="@+id/progress_circular_home"
+                    android:indeterminateDrawable="@drawable/progress_bar_custom"
+                    />
+
+
+                <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:id="@+id/list_game"
-                    android:layout_marginTop="5dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
                     app:layout_constraintTop_toBottomOf="@id/best_sales_text"
                     app:layout_constraintStart_toStartOf="@id/guideline_recycle_view_start"
-                    app:layout_constraintEnd_toEndOf="@id/guideline_recycle_view_end"/>
+                    app:layout_constraintEnd_toEndOf="@id/guideline_recycle_view_end">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/list_game"
+                        />
+
+                </LinearLayout>
+
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </ScrollView>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
