--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -92,6 +92,7 @@
             android:textColor="#ffffff"
             android:inputType="text"
             android:textSize="15sp"
+            android:id="@+id/value_search_game"
             android:paddingStart="10dp"
             android:paddingEnd="1dp"
             android:layout_weight="1"
@@ -102,6 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="8"
             android:scaleY="0.5"
+            android:id="@+id/search_click"
             android:scaleX="0.5"
             android:src="@drawable/search"
             />
@@ -124,6 +126,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:id="@+id/search_recycler_view"
         app:layout_constraintTop_toBottomOf="@id/number_of_result_text"
         app:layout_constraintStart_toStartOf="@id/guideline_recycle_view_start"
         app:layout_constraintEnd_toEndOf="@id/guideline_end_scroll_view"
