--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#1a2025"
-    tools:context=".ForgotPassword">
+    tools:context=".forgotPassword.ForgotPasswordActivity">
 
     <TextView
         android:layout_width="match_parent"
