--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#1a2025"
-    tools:context=".Search">
+    tools:context=".search.SearchActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_start_header"
