--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -36,6 +36,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
             android:text="@string/search_header"
             android:gravity="center|start"
             android:layout_weight="4"/>
@@ -133,6 +134,26 @@
         >
 
     </androidx.recyclerview.widget.RecyclerView>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"
+        android:id="@+id/guideline_progress_bar"
+        />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@id/number_of_result_text"
+        app:layout_constraintStart_toStartOf="@id/guideline_progress_bar"
+        app:layout_constraintEnd_toEndOf="@+id/guideline_progress_bar"
+        android:id="@+id/progress_circular_home"
+        android:indeterminateDrawable="@drawable/progress_bar_custom"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
