--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -111,7 +111,7 @@
                         android:textColorHint="#ffffff"
                         android:textColor="#ffffff"
                         android:inputType="text"
-                        android:id="@+id/value_search_gamee"
+                        android:id="@+id/value_search_game"
                         android:textSize="15sp"
                         android:paddingStart="10dp"
                         android:paddingEnd="1dp"
@@ -168,6 +168,7 @@
                             android:layout_height="48dp"
                             android:layout_gravity="bottom"
                             android:textSize="13sp"
+                            android:id="@+id/show_more_game"
                             android:background="@drawable/custom_connect_button"
                             android:text="@string/know_more"/>
                         <ImageView
