image displaying in detailsGame

--- a/app/src/main/res/layout/activity_details_game.xml
+++ b/app/src/main/res/layout/activity_details_game.xml
@@ -108,6 +108,7 @@
             android:scaleType="centerInside"
             android:layout_gravity="start|center"
             android:src="@drawable/fifa_23_jacket"
+            android:id="@+id/gameDetailsImg"
             />
 
         <LinearLayout
