--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -153,20 +153,21 @@
                         android:padding="10dp"
                         android:theme="@style/TextAppearance.GamePod"
                         app:layout_constraintTop_toTopOf="parent"
+                        android:id="@+id/backGroundBestGame"
                         >
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="FIFA 23"
                             android:textSize="22sp"
-                            android:textColor="@color/purple_200"
+                            android:textColor="@color/white"
                             android:layout_gravity="center|start"
                             android:layout_marginBottom="10dp"/>
                         <TextView
                             android:layout_width="180dp"
                             android:layout_height="wrap_content"
                             android:textSize="12sp"
-                            android:textColor="@color/purple_200"
+                            android:textColor="@color/white"
                             android:text="Le jeu de foot de référence"
                             android:layout_marginTop="10dp"
                             android:layout_gravity="center|start"/>
