--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -104,7 +104,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:id="@+id/password_field"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:background="@drawable/custom_edit_text"
                 android:layout_gravity="center"
                 android:hint="@string/password_button"
@@ -132,7 +132,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:id="@+id/password_verify_field"
                 android:background="@drawable/custom_edit_text"
                 android:layout_gravity="center"
