--- a/app/src/main/res/layout/activity_my_likes.xml
+++ b/app/src/main/res/layout/activity_my_likes.xml
@@ -50,6 +50,46 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5"/>
 
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintTop_toTopOf="@id/guideline_center"
+        app:layout_constraintBottom_toTopOf="@id/guideline_center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/empty_list_image"
+        android:src="@drawable/empty_likes"/>
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1"
+        android:id="@+id/begin_text"/>
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.9"
+        android:id="@+id/end_text"/>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/proxima_nova_font"
+        android:layout_marginTop="35dp"
+        android:gravity="center"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        android:id="@+id/empty_list_text"
+        app:layout_constraintTop_toBottomOf="@id/empty_list_image"
+        app:layout_constraintStart_toStartOf="@id/begin_text"
+        app:layout_constraintEnd_toEndOf="@id/end_text"
+        android:text="@string/empty_likes_text"
+        />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -58,5 +98,32 @@
         android:id="@+id/myLikesContent"
         android:orientation="vertical">
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"
+        android:id="@+id/mid_part"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.8"
+        android:id="@+id/bottom_part"
+        />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/bottom_part"
+        android:indeterminate="true"
+        app:layout_constraintStart_toStartOf="@+id/mid_part"
+        app:layout_constraintEnd_toEndOf="@+id/mid_part"
+        android:id="@+id/progress_circular_load"
+        android:indeterminateDrawable="@drawable/progress_bar_custom"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
