--- a/app/src/main/res/layout/list_games_element.xml
+++ b/app/src/main/res/layout/list_games_element.xml
@@ -26,23 +26,25 @@
             android:orientation="vertical">
             <TextView
                 android:id="@+id/title_game"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:layout_width="150dp"
+                android:layout_height="30dp"
+                android:textSize="15sp"
                 android:text="Test"
-                android:gravity="right"/>
+                android:gravity="left"/>
             <TextView
                 android:id="@+id/description_game"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
+                android:textSize="12sp"
                 android:text="text de description"
                 android:gravity="start"/>
 
             <TextView
                 android:id="@+id/price_game"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Prix: 10€"
+                android:layout_width="95dp"
+                android:textSize="12sp"
+                android:layout_height="20dp"
+                android:text="@string/price"
                 android:gravity="bottom"
                 />
 
